storage of info

--- a/express/package.json
+++ b/express/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/awang2330/Assignment-2-Student-Store#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "lowdb": "^1.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
