server side fetching set

--- a/express/package.json
+++ b/express/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/awang2330/Assignment-2-Student-Store#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "morgan": "^1.10.0",
